<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright 2018, 2021 Jorel Ali (Skepter) - MIT License Permission is 
	hereby granted, free of charge, to any person obtaining a copy of this software 
	and associated documentation files (the "Software"), to deal in the Software 
	without restriction, including without limitation the rights to use, copy, 
	modify, merge, publish, distribute, sublicense, and/or sell copies of the 
	Software, and to permit persons to whom the Software is furnished to do so, 
	subject to the following conditions: The above copyright notice and this 
	permission notice shall be included in all copies or substantial portions 
	of the Software. THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY 
	KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF 
	MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN 
	NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, 
	DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, 
	ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
	DEALINGS IN THE SOFTWARE. -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>commandapi</artifactId>
		<groupId>dev.jorel</groupId>
		<version>9.3.0</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>commandapi-core</artifactId>

	<repositories>
		<repository>
			<id>minecraft-libraries</id>
			<url>https://libraries.minecraft.net</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<dependencies>
		<!-- Minecraft dependencies -->
		<dependency>
			<groupId>com.mojang</groupId>
			<artifactId>brigadier</artifactId>
			<version>1.0.17</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.mojang</groupId>
			<artifactId>authlib</artifactId>
			<version>3.3.39</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.19.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Annotations processor -->
		<dependency>
			<groupId>dev.jorel</groupId>
			<artifactId>commandapi-preprocessor</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<!-- Run commandapi annotation preprocessor -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>-Xlint</arg>
					</compilerArgs>
					<annotationProcessors>
						<annotationProcessor>dev.jorel.commandapi.preprocessor.Preprocessor</annotationProcessor>
					</annotationProcessors>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<!-- to avoid bugs in some situations -->
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<!-- create report during maven verify phase -->
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>